# gedit-code-assistance

./: AUTHORS  Makefile.am  NEWS  README  README.markdown  autogen.sh  configure.ac  design.jft  gedit-code-assistance.doap
backends/: Makefile.am
backends/c/: Makefile.am  gcp-c-backend.vala  gcp-c-config.vala.in  gcp-c-document.vala  gcpbackendc.plugin.in
backends/python/: Makefile.am  gcpbackendpython.plugin.in
backends/python/gcpbackendpython/: Makefile.am  backend.py  document.py
backends/xml/: Makefile.am  gcpbackendxml.plugin.in
backends/xml/gcpbackendxml/: Makefile.am  __init__.py  backend.py  document.py
data/: Makefile.am  gcp.css  gcp.gedit-plugin  gcp.plugin  gcp.plugin.in
src/: Makefile.am  gcp-app-activatable.vala  gcp-backend-implementation.vala  gcp-backend-manager.vala  gcp-backend.vala  gcp-c-backend.vala  gcp-c-compile-args.vala  gcp-c-document.vala  gcp-c-semantic-value.vala  gcp-c-translation-unit.vala  gcp-c-translator.vala  gcp-compile-args.vala  gcp-diagnostic-colors.vala  gcp-diagnostic-message.vala  gcp-diagnostic-support.vala  gcp-diagnostic-tags.vala  gcp-diagnostic.vala  gcp-document.vala  gcp-expand-range.vala  gcp-log.vala  gcp-plugin.vala  gcp-plugin2.vala  gcp-plugin3.vala  gcp-scrollbar-marker.vala  gcp-semantic-value-support.vala  gcp-semantic-value.vala  gcp-source-index.vala  gcp-source-location.vala  gcp-source-range-support.vala  gcp-source-range.vala  gcp-symbol-browser-support.vala  gcp-symbol-browser.vala  gcp-unsaved-file.vala  gcp-utils-c.c  gcp-utils-c.h  gcp-view-activatable.vala  gcp-view.vala  gcp-window-helper.vala  gcp.deps  gcp.vala
src/backends/c/: gcp-c-backend.vala  gcp-c-translation-unit.vala
vapi/: Makefile.am  clang.vapi  config.vapi  gcp-utils.vapi  gcp.vapi  gdk-3.0.vapi  gedit-2.20.vapi  gedit-3.0.vapi  gobject-introspection-1.0.vapi  gtk+-3.0.vapi  gtksourceview-3.0.vapi  libpeas-1.0.vapi
